# ron2

./: .gitmodules  Cargo.toml  EDITOR_SETUP.md  ERROR_QUALITY_REPORT.md  MIGRATION.md  README.md  TODO.md  rustfmt.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: doc.rs  fmt.rs  main.rs
crates/derive/: Cargo.toml  README.md
crates/derive/src/: attr.rs  de.rs  field_util.rs  lib.rs  schema_build.rs  schema_codegen.rs  ser.rs  type_mapper.rs  util.rs
crates/derive/tests/: acceptance_tests.rs  derive_tests.rs  error_quality.rs  extensions.rs
crates/doc/: Cargo.toml
crates/doc/src/: discovery.rs  example.rs  generator.rs  index.rs  lib.rs  link.rs  single_page.rs
crates/error/: Cargo.toml
crates/error/src/: error.rs  lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: completion.rs  diagnostics.rs  document.rs  hover.rs  lib.rs  lsp_utils.rs  main.rs  schema_resolver.rs  schema_utils.rs
crates/lsp/tests/: completion_tests.rs
crates/main/: CLAUDE.md  Cargo.toml  README.md
crates/main/benches/: common.rs  core.rs  formatting.rs  roundtrip.rs  serialization.rs  typed.rs
crates/main/examples/: bench.rs
crates/main/src/: chars.rs  error.rs  extensions.rs  fmt.rs  lexer.rs  lib.rs  options.rs  ser.rs
crates/main/src/ast/: convert.rs  fmt.rs  mod.rs  parse.rs  ser.rs  unescape.rs
crates/main/src/ast/parse/: attribute.rs  collection.rs  core.rs  literal.rs  mod.rs  struct_field.rs  tuple.rs
crates/main/src/convert/: impls_collection.rs  impls_primitive.rs  impls_wrapper.rs  map_access.rs  mod.rs  number.rs  spanned.rs
crates/main/src/error/: span.rs  validation.rs
crates/main/src/schema/: collect.rs  error.rs  mod.rs  storage.rs  traits.rs  types.rs  validation.rs
crates/main/src/util/: mod.rs  span_substring.rs
crates/main/src/value/: map.rs  mod.rs  number.rs
crates/main/tests/: compat.rs  edge_cases.rs  error_quality.rs  errors.rs  integration_tests.rs  named_types.rs  roundtrip.rs  schema_generics.rs  storage_tests.rs  types_tests.rs  validation_tests.rs
crates/ron-derive/: Cargo.toml  README.md
crates/ron-derive/src/: attr.rs  de.rs  lib.rs  schema_build.rs  schema_codegen.rs  ser.rs  type_mapper.rs  util.rs
crates/ron-derive/tests/: derive_tests.rs  error_quality.rs  extensions.rs
crates/ron-doc/: Cargo.toml
crates/ron-doc/src/: config.rs  discovery.rs  example.rs  generator.rs  index.rs  lib.rs  link.rs  main.rs  single_page.rs
crates/ron-error/: Cargo.toml
crates/ron-error/src/: error.rs  path.rs  span.rs
crates/ron-lsp/: Cargo.toml
crates/ron-lsp/src/: completion.rs  diagnostics.rs  document.rs  hover.rs  lib.rs  lsp_utils.rs  main.rs  schema_resolver.rs  schema_utils.rs
crates/ron-lsp/tests/: completion_tests.rs
crates/ron-schema/: Cargo.toml
crates/ron-schema/src/: de.rs  error.rs  lib.rs  ser.rs  storage.rs  traits.rs  types.rs  validation.rs
crates/ron-schema/tests/: integration_tests.rs  storage_tests.rs  types_tests.rs  validation_tests.rs
crates/ron2/: CLAUDE.md  Cargo.toml  README.md
crates/ron2/benches/: common.rs  parsing.rs  serialization.rs  typed.rs
crates/ron2/examples/: bench.rs  debug_parse.rs
crates/ron2/src/: convert.rs  error.rs  lexer.rs  lib.rs  options.rs  ser.rs
crates/ron2/src/ast/: convert.rs  fmt.rs  mod.rs  parse.rs  ser.rs  unescape.rs
crates/ron2/src/convert/: impls_primitive.rs  impls_wrapper.rs  map_access.rs  number.rs
crates/ron2/src/value/: mod.rs  number.rs
crates/ron2/tests/: compat.rs  edge_cases.rs  error_quality.rs  named_types.rs  roundtrip.rs
crates/ronfmt/: Cargo.toml
crates/ronfmt/src/: main.rs
crates/ronfmt/tests/: cli.rs
crates/schema/: Cargo.toml
crates/schema/src/: error.rs  lib.rs  storage.rs  traits.rs  types.rs  validation.rs
crates/schema/tests/: integration_tests.rs  storage_tests.rs  types_tests.rs  validation_tests.rs
docs/: AudioConfig.md  GameConfig.md  GraphicsQuality.md  PlayerConfig.md  ShipType.md  WindowConfig.md  index.md
examples/config/: Cargo.toml  config.ron
examples/config/schemas/config_example/: AppConfig.schema.ron
examples/config/src/: main.rs
examples/error-report/: Cargo.toml
examples/error-report/src/: main.rs
examples/pretty-errors-ariadne/: Cargo.toml
examples/pretty-errors-ariadne/data/: broken-struct.ron
examples/pretty-errors-ariadne/src/: main.rs
examples/pretty-errors-miette/: Cargo.toml
examples/pretty-errors-miette/data/: invalid-syntax.ron  valid.ron
examples/pretty-errors-miette/src/: main.rs
examples/showcase/: Cargo.toml  README.md
examples/showcase/.cargo/: config.toml
examples/showcase/data/: game.ron
examples/showcase/src/: lib.rs  main.rs
ron2/: CLAUDE.md  Cargo.toml
ron2/examples/: debug_parse.rs
ron2/src/: chars.rs  de.rs  error.rs  extensions.rs  lexer.rs  lib.rs  options.rs  parse.rs  ser.rs  token.rs
ron2/src/ast/: convert.rs  mod.rs  parse.rs  ser.rs
ron2/src/util/: span_substring.rs
ron2/src/value/: map.rs  mod.rs  number.rs
ron2/tests/: errors.rs  named_types.rs  roundtrip.rs
schemas/ron-showcase/: GameConfig.schema.ron  GraphicsQuality.schema.ron  PlayerConfig.schema.ron  ShipType.schema.ron  WindowConfig.schema.ron
schemas/ron_showcase/: AudioConfig.schema.ron  GameConfig.schema.ron  PlayerConfig.schema.ron
scripts/: perf-asm.sh  perf-baseline.sh  perf-bloat.sh  perf-compare.sh
