[workspace]
resolver = "2"
members = [
    "crates/main",
    "crates/derive",
    "crates/lsp",
    "crates/doc",
    "crates/cli",
    "examples/showcase",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/torkleyy/ron-extras"

[workspace.dependencies]
ron2 = { path = "crates/main" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
