[workspace]
resolver = "3"
members = [
    "crates/main",
    "crates/derive",
    "crates/lsp",
    "crates/doc",
    "crates/cli",
    "examples/showcase", "examples/error-report",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/torkleyy/ron-extras"

[workspace.dependencies]
ron2 = { path = "crates/main", version = "0.1.0" }
ron2-derive = { path = "crates/derive", version = "0.1.0" }
ron2-doc = { path = "crates/doc", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
itoa = "1.0"
ahash = "0.8"

[profile.release]
debug = true # Enable debug symbols for profiling
# split-debuginfo = "unpacked"  # Required for Instruments on macOS

[profile.bench]
debug = true # Enable debug symbols for profiling benchmarks
