[workspace]
resolver = "3"
members = [
    "crates/main",
    "crates/derive",
    "crates/lsp",
    "crates/doc",
    "crates/cli",
    "examples/showcase", "examples/error-report",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ron-rs/ron2"
readme = "README.md"
rust-version = "1.90.0"

[workspace.dependencies]
ron2 = { path = "crates/main", version = "0.2.1" }
ron2-derive = { path = "crates/derive", version = "0.2.1" }
ron2-doc = { path = "crates/doc", version = "0.2.1" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
itoa = "1.0"
ahash = "0.8"

[profile.release]
debug = true # Enable debug symbols for profiling
# split-debuginfo = "unpacked"  # Required for Instruments on macOS

[profile.bench]
debug = true # Enable debug symbols for profiling benchmarks
