[package]
name = "ron2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
keywords = ["parser", "serialization", "ron"]
authors = [
	"Thomas Schaller <torkleyy@gmail.com>",
]
edition = "2024"
description = "Rusty Object Notation - Value-only variant without serde"
categories = ["encoding"]
rust-version = "1.90.0"

[features]
default = ["std"]
integer128 = []
std = []
internal-span-substring-test = ["dep:unicode-segmentation"]

[dependencies]
bitflags = { version = "2.1", default-features = false }
indexmap = { version = "2.0", default-features = false }
unicode-ident = { version = "1.0", default-features = false }
unicode-segmentation = { version = "1.11", default-features = false, optional = true }

[dev-dependencies]

[package.metadata.docs.rs]
features = ["integer128"]
rustdoc-args = ["--generate-link-to-definition"]
