[package]
name = "ron2-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tools for RON (Rusty Object Notation)"

[[bin]]
name = "ron"
path = "src/main.rs"

[dependencies]
ron2 = { workspace = true, features = ["xdg"] }
ron2-doc = { path = "../doc" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
