[package]
name = "ron2-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for RON serialization, deserialization, and schema generation"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
dirs = "6"

[dev-dependencies]
ron2 = { path = "../main" }
