[package]
name = "ron2-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language server providing auto-completions for RON files"

[[bin]]
name = "ron-lsp"
path = "src/main.rs"

# [[bin]]
# name = "ron2-lsp"
# path = "src/main.rs"

[dependencies]
ahash.workspace = true
ron2.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
