[package]
name = "ron2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
keywords = ["parser", "serialization", "ron"]
authors = [
	"Thomas Schaller <torkleyy@gmail.com>",
]
edition = "2024"
description = "Rusty Object Notation - Value-only variant without serde"
categories = ["encoding"]
rust-version = "1.90.0"

[features]
default = []
integer128 = []
internal-span-substring-test = ["dep:unicode-segmentation"]

[dependencies]
bitflags = { version = "2.1", default-features = false }
dirs = "6.0.0"
indexmap = { version = "2.0", default-features = false, features = ["std"] }
ron2-error = { workspace = true }
ron2-derive = { path = "../derive" }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
unicode-ident = { version = "1.0", default-features = false }
unicode-segmentation = { version = "1.11", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ron = "0.8"
serde = { workspace = true }
serial_test = "3.0"
tempfile = "3.10"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "formatting"
harness = false

[[bench]]
name = "roundtrip"
harness = false

[[bench]]
name = "typed"
harness = false

[package.metadata.docs.rs]
features = ["integer128"]
rustdoc-args = ["--generate-link-to-definition"]
