[package]
name = "ron2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["parser", "serialization", "ron"]
authors = [
    "Thomas Schaller <me@torkleyy.com>",
    "Juniper Tyree <juniper.tyree@helsinki.fi>",
    "Dzmitry Malyshau <kvarkus@gmail.com>",
    "Christopher Durham <cad97@cad97.com>",
]
description = "RON parser with full AST access, perfect round-trip fidelity, and formatting tools"
categories = ["encoding"]
rust-version = "1.90.0"

[features]
default = ["derive"]
derive = ["dep:ron2-derive"]
integer128 = []
xdg = ["dep:dirs"]
internal-span-substring-test = ["dep:unicode-segmentation"]

[dependencies]
ahash.workspace = true
bitflags = { version = "2.10", default-features = false }
dirs = { version = "6.0.0", optional = true }
indexmap = { version = "2.13", default-features = false, features = ["std"] }
itoa.workspace = true
ron2-derive = { workspace = true, optional = true }
unicode-ident = { version = "1.0", default-features = false }
unicode-segmentation = { version = "1.12", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
ron = "0.12"
serde = { workspace = true }
serial_test = "3.3"
tempfile = "3.24"

[[bench]]
name = "core"
harness = false

[[bench]]
name = "typed"
harness = false
required-features = ["derive"]

[package.metadata.docs.rs]
features = ["integer128"]
rustdoc-args = ["--generate-link-to-definition"]
