[package]
name = "ron-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language server providing auto-completions for RON files"

[dependencies]
ron-schema.workspace = true
ron.workspace = true
serde.workspace = true
thiserror.workspace = true
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
