[package]
name = "ron-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Schema types, validation, and storage for RON files"

[dependencies]
ron.workspace = true
serde.workspace = true
thiserror.workspace = true
dirs = "5"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
