[package]
name = "ronfmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A formatter for RON (Rusty Object Notation) files"

[[bin]]
name = "ronfmt"
path = "src/main.rs"

[dependencies]
ron2.workspace = true
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
